# phaseviz

./: Cargo.toml  README.md
assets/test/: memviz.chekpoint.28516  memviz.chekpoint.8446
assets/test/hello/: hello.c
src/: app.rs  controller.rs  main.rs  p2.rs  parser.rs  parser_2.rs  profile.pest  profile.rs  ui.rs  utils.rs
src/model/profile/: mod.rs  parser.rs
src/ui/: addr_range.rs  checkpoints.rs  mod.rs  source.rs
