[package]
name = "phaseviz"
version = "0.1.0"
authors = ["Cédric Courtaud <cedric.courtaud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
termion = "1.5.5"
tui = "0.10.0"
